# openline-proof-adapter

./: .gitignore  CHANGELOG.md  README.md  REVIEW_REMEDIATION.md  RUN_REPORT.json  TEST_REPORT.md  pyproject.toml  receipts.jsonl  verify-receipts-node.mjs
docs/: BOUNDARY_RECEIPT_PROFILE.md  MIGRATION.md  THREAT_MODEL.md
examples/: reddit_stack_demo.py
history/: README.md
openline-proof-adapter/: README.md  TEST_REPORT.md  pyproject.toml  receipts.jsonl
openline-proof-adapter/examples/: reddit_stack_demo.py
openline-proof-adapter/openline_proof_adapter/: __init__.py  adapter.py  receipt.py
openline-proof-adapter/tests/: test_proof_adapter.py
openline_proof_adapter/: __init__.py  adapter.py  receipt.py
schemas/: boundary-assessment-receipt.schema.json
scripts/: release_check.py
tests/: test_node_verifier.py  test_proof_adapter.py
