[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openline-proof-adapter"
version = "0.2.0"
description = "Signed boundary assessments for existing AI agent stacks"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
  "cryptography>=41",
]

[project.urls]
Repository = "https://github.com/terryncew/openline-proof-adapter"
"Wire Canon" = "https://github.com/terryncew/olp-wire-canon"
"Receipt Gate" = "https://github.com/terryncew/openline-receipt-gate"

[tool.setuptools.packages.find]
include = ["openline_proof_adapter*"]
