[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openline-proof-adapter"
version = "0.1.0"
description = "Portable OLP receipts and guard receipts for existing AI agent stacks"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
  "cryptography>=41",
]

[tool.setuptools.packages.find]
include = ["openline_proof_adapter*"]
